fix: text alignment fix for form elements

--- a/scss/components/_Forms.scss
+++ b/scss/components/_Forms.scss
@@ -27,6 +27,9 @@ $label-font-size: $font-size-base !default;
   outline: none;
   padding: $padding-small;
   width: 100%;
+  .rev-TextCenter & {
+    text-align: left;
+  }
 
   &:active,
   &:focus {
@@ -52,6 +55,9 @@ $label-font-size: $font-size-base !default;
   display: block;
   font-size: $label-font-size;
   margin: 0 0 $margin-base;
+  .rev-TextCenter & {
+    text-align: left;
+  }
 
   .rev-Button,
   .rev-Input,
